# profumo-monitor

./: .env.example  .gitignore  COMANDI_PRONTI.txt  COMANDI_TUTTI.txt  COMANDI_ZSH.txt  CONFIGURAZIONE_TEMPO_REALE.md  COVERAGE_SCRAPING.md  CREA_TOKEN_GITHUB.md  DEPLOY_CLOUD.md  DEPLOY_QUICK_START.md  Dockerfile  GOOGLE_CLOUD_SETUP.md  GUIDA_COMPLETA_DEPLOY.md  GUIDA_COMPLETA_TERMINALE.md  HOW_IT_WORKS.md  IMPROVEMENTS.md  INIZIA_QUI.md  ISTRUZIONI_FINALI.md  MIGRATE_TO_GITHUB.md  Procfile  QUICK_START.md  README.md  TELEGRAM_BOT.md  async_scraper.py  config.py  database.py  debug_site.py  main.py  notifier.py  ottimizza_scraping.py  price_analyzer.py  profumi_prices.db  pyproject.toml  quick_test.py  railway.json  requirements-dev.txt  requirements.txt  run_immediate.py  scheduler.py  scraper.py  (+14 more)
.github/workflows/: monitor.yml
scripts/: README.md  __init__.py  analizza_copertura.py  analyze_structure.py  ottimizza_scraping.py  quick_test.py  run_immediate.py  send_test_message.py  test_improved_scraper.py  test_notifications.py  test_scraper.py  test_scraping_completo.py  test_telegram_bot.py  verify_telegram.py  view_alerts.py
tests/: __init__.py  conftest.py  test_database.py  test_price_analyzer.py  test_scraper.py
